create vuejs skelton project

--- a/index.html
+++ b/index.html
@@ -1,117 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bullshit Bingo – LLM-Edition 🤡</title>
-<style>
-  body, html {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: 1fr;
-    gap: 10px;
-    width: 80%;
-    max-width: 500px;
-    position: relative; /* Set to relative to use as reference for absolute child */
-    aspect-ratio: 1 / 1; /* Ensures the overall grid is square */
-  }
-  .tile {
-    background-color: #4CAF50;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    aspect-ratio: 1 / 1; /* Ensures each tile is square */
-    cursor: pointer;
-    perspective: 1000px;
-    transition: transform 0.6s, z-index 0.6s 0s; /* Update transition */
-  }
-  .tile-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-  }
-  .tile.flipped .tile-inner {
-    transform: rotateY(540deg) scale(5); /* Apply rotation and scale */
-  }
-  .front, .back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-  }
-  .front {
-    background-color: #4CAF50;
-    color: white;
-  }
-  .back {
-    background-color: #007BFF;
-    color: white;
-    transform: rotateY(180deg);
-    font-size: .6rem;
-  }
-</style>
-</head>
-<body>
-<h1>Flip Tiles</h1>
-<div class="grid">
-  <!-- JavaScript will inject tiles here -->
-</div>
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-  const grid = document.querySelector('.grid');
-  for (let i = 0; i < 25; i++) {
-    grid.appendChild(createTile(i));
-  }
-});
-
-function createTile(index) {
-  const tile = document.createElement('div');
-  tile.className = 'tile';
-
-  const inner = document.createElement('div');
-  inner.className = 'tile-inner';
-
-  const front = document.createElement('div');
-  front.className = 'front';
-  front.textContent = `Prompt`;
-
-  const back = document.createElement('div');
-  back.className = 'back';
-  back.textContent = `Eine Eingabe oder Anfrage an ein KI-Modell, die als Startpunkt dient, um eine spezifische Antwort oder Ergebnis zu generieren.`;
-
-  inner.appendChild(front);
-  inner.appendChild(back);
-  tile.appendChild(inner);
-
-  tile.addEventListener('click', () => {
-    // Ensure only one tile can be flipped at a time
-    document.querySelectorAll('.tile').forEach((otherTile) => {
-      if (otherTile !== tile) {
-        otherTile.style.zIndex = '0'; // Reset z-index for all tiles
-        otherTile.classList.remove('flipped'); // Unflip all other tiles
-      } else {
-        tile.style.zIndex = '1000';
-        tile.classList.toggle('flipped');
-      }
-    });
-  });
-
-  return tile;
-}
-</script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
